update applied-machine-learning course web

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,6 +109,7 @@ nav:
 
   - Course Notes:
     - Course Notes: course-notes/README.md
+    - Applied Machine Learning: course-notes/applied-machine-learning/README.md
 
   - Knowledge Base:
     - Knowledge Base: knowledge-base/README.md
