--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,7 @@ nav:
     - Research Logs: research-logs/README.md
     - Cervical Cancer Cytology: 
       - Cervical Cancer Cytology: research-logs/cervical-cancer-cytology/README.md
-      - Self-Supervised Learning for Cervical Cancer Classification: research-logs/cervical-cancer-cytology/notes/ssl_for_cervical_cancer.md
+      - Topic 01. Ensemble Learning for Cervical Cancer: research-logs/cervical-cancer-cytology/note-01-ssl-for-cervical-cancer.md
     - Pronunciation Scoring:
       - Pronunciation Scoring: research-logs/pronunciation-scoring/README.md
       - Tổng quan về Pronunciation Scoring: research-logs/pronunciation-scoring/report01.md
@@ -113,20 +113,32 @@ nav:
 
   - Knowledge Base:
     - Knowledge Base: knowledge-base/README.md
-    - English Knowledge Base: research-logs/cervical-cancer-cytology.md
+    # - MLOps Tutorials: knowledge-base/mlops-tutorials/README.md
+    - FastAPI Tutorials:
+      - FastAPI Tutorials: knowledge-base/fastapi-tutorials/README.md
+      - Lesson 01. FastAPI Overview and Project Setup: knowledge-base/fastapi-tutorials/notes/fastapi_overview_and_project_setup.md
 
 # 05. setup other configurations
 extra:
   social:
-    - icon: octicons/mail-16
-      link: mailto:<thaihocit02@gmail.com>
-      name: Email
-    - icon: material/web
-      link: https://nthaihoc.github.io/about-me
-      name: Author
-    - icon: simple/workplace
+    - icon: material/school
+      link: https://ictu.edu.vn
+      name: Thai Nguyen University of Information and Technology Communication
+    - icon: material/domain
       link: https://iast.ictu.edu.vn
       name: Institute of Applied Science Technology
+    - icon: material/web
+      link: https://nthaihoc.github.io/about-me
+      name: Profile
+    - icon: material/email-multiple-outline
+      link: mailto:thaihoc.ictu@gmail.com
+      name: Email
+    - icon: material/github
+      link: https://github.com/nthaihoc?tab=repositories
+      name: Github
+    - icon: material/facebook
+      link: https://www.facebook.com/nthaihoc.02
+      name: Facebook
   analytics:
     provider: google
     property: UA-XXXXXXXX-X  
