--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: OpenNotesHub
 
 # 02. setup logo, icon, format, etc.
 theme:
-  favicon: assets/images/logo.png
+  favicon: assets/logos/logo.png
   palette:
     primary: blue grey
     accent: red
@@ -28,7 +28,7 @@ theme:
       example: octicons/beaker-16
       quote: octicons/quote-16
     repo: fontawesome/brands/github
-  logo: assets/images/logo.png
+  logo: assets/logos/logo.png
   features:
     - content.code.annotate 
     - content.footnote.tooltips
@@ -97,28 +97,33 @@ nav:
   - Home: index.md
 
   - Research Logs: 
-    - Research Logs: research-logs/README.md
-    - Cervical Cancer Cytology: 
-      - Cervical Cancer Cytology: research-logs/cervical-cancer-cytology/README.md
-      - Topic 01. Ensemble Learning Techniques: research-logs/cervical-cancer-cytology/note-01-ssl-for-cervical-cancer.md
-      - Topic 02. Self Supervised Learning Algorithm: research-logs/cervical-cancer-cytology/note-01-ensemble-learning-for-cervical-cancer.md
-    # - Pronunciation Scoring:
-    #   - Pronunciation Scoring: research-logs/pronunciation-scoring/README.md
-    #   - Tổng quan về Pronunciation Scoring: research-logs/pronunciation-scoring/report01.md
-    #   - Triển khai mô hình cơ bản, đánh giá và phân tích lỗi: research-logs/pronunciation-scoring/report02.md
+    - Overview: research/README.md
+
+    - Cervical Cancer Cytology:
+      - Overview: research/cervical-cancer-cytology/README.md
+      - Experiment 01 - Ensemble Learning: research/cervical-cancer-cytology/experiments/note-01-ssl-for-cervical-cancer.md
+      - Experiment 02 - Self-Supervised Learning: research/cervical-cancer-cytology/experiments/note-01-ensemble-learning-for-cervical-cancer.md
+
+    - Pronunciation Scoring:
+      - Overview: research/pronunciation-scoring/README.md
+      - Report 01 - Introduction: research/pronunciation-scoring/experiments/report01.md
+      - Report 02 - Baseline Models & Error Analysis: research/pronunciation-scoring/experiments/report02.md
 
   - Course Notes:
-    - Course Notes: course-notes/README.md
-    - Applied Machine Learning: course-notes/applied-machine-learning/README.md
+    - Overview: courses/README.md
+
+    - Applied Machine Learning: courses/applied-machine-learning/README.md
+
     - Large Language Models:
-      - Large Language Models: course-notes/large-language-models/README.md
-      - Lesson 03. Attention Mechanisms Knowledge Base: course-notes/large-language-models/lesson-03-attention_mechanisms_knowledge_base.md
+      - Overview: courses/large-language-models/README.md
+      - Lesson 03. Attention Mechanisms: courses/large-language-models/lesson-03-attention_mechanisms_knowledge_base.md
       
   - Knowledge Base:
-    - Knowledge Base: knowledge-base/README.md
+    - Overview: knowledge-base/README.md
+
     # - MLOps Tutorials: knowledge-base/mlops-tutorials/README.md
     - FastAPI Tutorials:
-      - FastAPI Tutorials: knowledge-base/fastapi-tutorials/README.md
+      - Overview: knowledge-base/fastapi-tutorials/README.md
       - Lesson 01. FastAPI Overview and Project Setup: knowledge-base/fastapi-tutorials/lesson-01-fastapi_overview_and_project_setup.md
 
 # 05. setup other configurations
@@ -142,6 +147,3 @@ extra:
     - icon: material/facebook
       link: https://www.facebook.com/nthaihoc.02
       name: Facebook
-  analytics:
-    provider: google
-    property: UA-XXXXXXXX-X  
