--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: OpenNotesHub
 
 # 02. setup logo, icon, format, etc.
 theme:
-  favicon: assets/logos/logo.png
+  favicon: octicons/book-24
   palette:
     primary: blue grey
     accent: red
@@ -28,7 +28,7 @@ theme:
       example: octicons/beaker-16
       quote: octicons/quote-16
     repo: fontawesome/brands/github
-  logo: assets/logos/logo.png
+    logo: octicons/book-16
   features:
     - content.code.annotate 
     - content.footnote.tooltips
@@ -101,7 +101,7 @@ nav:
 
     - Cervical Cancer Cytology:
       - Cervical Cancer Cytology: research/cervical-cancer-cytology/README.md
-      - Experiment 01 - Ensemble Learning: research/cervical-cancer-cytology/experiments/note-01-ssl-for-cervical-cancer.md
+      - Experiment 01 - Ensemble Learning: research/cervical-cancer-cytology/experiments/exp-01-ensemble_learning.md 
       - Experiment 02 - Self-Supervised Learning: research/cervical-cancer-cytology/experiments/note-01-ensemble-learning-for-cervical-cancer.md
 
     # - Pronunciation Scoring:
