--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,7 +101,7 @@ nav:
 
     - Cervical Cancer Cytology:
       - Cervical Cancer Cytology: research/cervical-cancer-cytology/README.md
-      - Experiment 01 - Ensemble Learning: research/cervical-cancer-cytology/experiments/exp-01-ensemble_learning.md 
+      - Experiment 01 - Data Aggeration, Training & Evaluation : research/cervical-cancer-cytology/experiments/exp-01-ensemble_learning.md 
       - Experiment 02 - Self-Supervised Learning: research/cervical-cancer-cytology/experiments/note-01-ensemble-learning-for-cervical-cancer.md
 
     # - Pronunciation Scoring:
