--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,13 +96,16 @@ copyright: ©️ 2025 by Thai Hoc Nguyen
 nav:
   - Home: index.md
 
-  - Research Logs: 
-    - Research Logs: research/README.md
-
+  - Research Logs:
+    - Introduction: research/README.md
+    
     - Cervical Cancer Cytology:
-      - Cervical Cancer Cytology: research/cervical-cancer-cytology/README.md
-      - Experiment 01. Data Aggeration Training Evaluation : research/cervical-cancer-cytology/experiments/exp-01-ensemble_learning.md 
-      - Experiment 02. Self Supervised Learning: research/cervical-cancer-cytology/experiments/exp-02-self_supervised_learning.md
+      - Project Overview: research/cervical-cancer-cytology/README.md
+      - Experiments:
+        - 01. Ensemble Learning: research/cervical-cancer-cytology/experiments/01-ensemble_learning.md
+        - 02. Self-Supervised Learning: research/cervical-cancer-cytology/experiments/02-self_supervised_learning.md
+      - Literature Review:
+        - Datasets: research/cervical-cancer-cytology/literature-review/01-datasets_survey.md
 
     # - Pronunciation Scoring:
     #   - Overview: research/pronunciation-scoring/README.md
